make it a sample javafx archetype, will introduce a simpler one
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-archetypes/sample-javafx@18281 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
     <version>6</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>javafx</artifactId>
+  <artifactId>sample-javafx</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
-  <name>Simple JavaFX Archetype</name>
-  <description>Simple archetype for creating a JavaFX application</description>
+  <name>Sample JavaFX Archetype</name>
+  <description>Sample archetype for creating a JavaFX application</description>
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/javafx</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/sample-javafx</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/sample-javafx</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/sample-javafx</url>
   </scm>
 </project>
