--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>javafx</artifactId>
-  <version>0.5</version>
+  <version>0.6-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
   <name>JavaFX Archetype</name>
   <description>Archetype for creating a JavaFX application</description>
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/javafx-0.5</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/javafx-0.5</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/tags/javafx-0.5</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/javafx</url>
   </scm>
 </project>
