--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
+    <parent>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>mojo-parent</artifactId>
+        <version>36</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.codehaus.mojo.archetypes</groupId>
-    <artifactId>mojo-archetypes</artifactId>
-    <version>6</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>javafx</artifactId>
-  <version>0.6-SNAPSHOT</version>
-  <packaging>maven-archetype</packaging>
-  <name>JavaFX Archetype</name>
-  <description>Archetype for creating a JavaFX application</description>
-  <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/javafx</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/javafx</url>
-  </scm>
+    <artifactId>javafx</artifactId>
+    <version>0.6-SNAPSHOT</version>
+    <packaging>maven-archetype</packaging>
+    <name>JavaFX Archetype</name>
+    <description>Archetype for creating a JavaFX application</description>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/mojohaus/javafx/issues</url>
+    </issueManagement>
+  
+    <scm>
+        <connection>scm:git:https://github.com/mojohaus/javafx.git</connection>
+        <developerConnection>scm:git:https://github.com/mojohaus/javafx.git</developerConnection>
+        <url>https://github.com/mojohaus/javafx/tree/${project.scm.tag}</url>
+        <tag>master</tag>
+    </scm>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                        <arguments>-Pmojo-release -N</arguments>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-archetype-plugin</artifactId>
+                    <version>2.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.archetype</groupId>
+                <artifactId>archetype-packaging</artifactId>
+                <version>2.0</version>
+            </extension>
+        </extensions>
+    </build>    
 </project>
