--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.codehaus.mojo.archetypes</groupId>
     <artifactId>javafx</artifactId>
-    <version>0.6</version>
+    <version>0.7-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
     <name>JavaFX Archetype</name>
     <description>Archetype for creating a JavaFX application</description>
@@ -21,7 +21,7 @@
         <connection>scm:git:https://github.com/mojohaus/javafx.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mojohaus/javafx</developerConnection>
         <url>https://github.com/mojohaus/javafx/tree/${project.scm.tag}</url>
-        <tag>javafx-0.6</tag>
+        <tag>master</tag>
     </scm>
     <build>
         <pluginManagement>
